# es_sfgtools

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .swp  Dockerfile  LICENSE  None  PIXIINFO.md  README.md  TODO.txt  base_environment.yml  directoryCatalog.json  environment.yml  environment_mac.yml  linux_build.sh  linux_environment.yml  mac_environment.yaml  mac_environment.yml  pip_requirements.txt  pixi.toml  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  sso_tokens.json
.github/workflows/: test-golang-compilation.yml  test-python.yml
.plans/prds/: 2026-03-31-mono-repo-package-split.md  2026-04-01-earthscope-sfg-standalone.md
app/: DEMO.md  INDEX.md  README.md  __main__.py  main.py  pre-proc-manifest.json  pre-proc-manifest.yaml
app/src/: __init__.py  commands.py  manifest.py  utils.py
app/tests/: dev_cli.py  garpos-manifest.json  garpos_manifest.json  pre-proc-manifest.json  pre-proc-manifest.yaml
dev/: 329653-003_20240806_042015_000296_SCRIPPS.pin  DEV_GARPOS_QUIRKS_DEMO.py  NCC1-preproc-manifest.json  NCC1.json  NCC1_Dec3_move_around.json  NCC1_vessel.json  batch_cascadia_gorda.py  demo_cascadia.ipynb  demo_site_conf.json  dev_catalog_qc.py  dev_check_results.py  dev_cli.py  dev_cli.yaml  dev_cloudpath.py  dev_datadiscovery.py  dev_dfo.json  dev_dir_handler.py  dev_ecs.py  dev_garpos.py  dev_garpos_tdb.py  dev_geolab_cli.py  dev_get_prods.py  dev_gnss_resource.py  dev_gnss_resources.py  dev_inspva.py  dev_mergeshotdata.py  dev_ncb1_garp.py  dev_qc_processing.py  dev_range_notat.py  dev_rinex_merge.py  dev_rinexstuff.py  dev_shotdata_parsing.py  dev_site_conf.json  dev_survey_int.py  dev_sv3.py  dev_test_rinex_kin.py  dev_test_sv2.py  dev_test_sv2_and_sv3.py  dev_test_sv3.py  dev_tiledb.py  (+16 more)
dev/notebooks/: GARPOS_QURIKS_DEMO.ipynb  compare_positions.ipynb  compare_positions_qc.ipynb  demo_cascadia.ipynb  demo_sv3_lifecycle.ipynb  dev_kalman.py  dev_kalman_2.py  garpos_benchmark.html  garpos_benchmark.ipynb  interpolation.ipynb  investigate_rinex.ipynb  investigate_tsp_gaps.ipynb  local_garpos_from_s3_data.ipynb  local_plotting_dev.ipynb  ncc1_demo.ipynb  ncc1_demo_mg.ipynb  nth1_qc_garpos.ipynb  nth1_qc_prep.ipynb  shotdata_gnss_refinement.py  test_positions_issue144.ipynb  test_rinex_to_kin.ipynb
docs/: requirements.txt
docs/api/: es_sfgtools.pipeline.rst  es_sfgtools.processing.functions.rst  es_sfgtools.processing.rst  es_sfgtools.processing.schemas.files.rst  es_sfgtools.processing.schemas.observables.rst  es_sfgtools.processing.schemas.rst  es_sfgtools.processing.schemas.site_config.rst  es_sfgtools.rst  es_sfgtools.utils.rst
docs/source/: api.rst  conf.py  geolab.rst  index.rst  usage.rst
docs/source/api/: earthscope_sfg.data_models.community_standards.rst  earthscope_sfg.data_models.constants.rst  earthscope_sfg.data_models.log_models.rst  earthscope_sfg.data_models.observables.rst  earthscope_sfg.data_models.rst  earthscope_sfg.data_models.sv3_models.rst  earthscope_sfg.logging.loggers.rst  earthscope_sfg.logging.rst  earthscope_sfg.novatel_tools.novatel_ascii_operations.rst  earthscope_sfg.novatel_tools.novatel_binary_operations.rst  earthscope_sfg.novatel_tools.novatel_to_rinex_operations.rst  earthscope_sfg.novatel_tools.rangea_parser.rst  earthscope_sfg.novatel_tools.rst  earthscope_sfg.novatel_tools.utils.rst  earthscope_sfg.seafloor_site_tools.rst  earthscope_sfg.seafloor_site_tools.soundspeed_operations.rst  earthscope_sfg.sonardyne_tools.rst  earthscope_sfg.sonardyne_tools.sv3_operations.rst  earthscope_sfg.sonardyne_tools.sv3_qc_operations.rst  earthscope_sfg.sonardyne_tools.utils.rst  earthscope_sfg.tiledb_schemas.arrays.rst  earthscope_sfg.tiledb_schemas.rst  earthscope_sfg.tiledb_schemas.schemas.rst  earthscope_sfg.utils.command_line_utils.rst  earthscope_sfg.utils.custom_warnings_exceptions.rst  earthscope_sfg.utils.model_update.rst  earthscope_sfg.utils.rinex_histogram.rst  earthscope_sfg.utils.rst  earthscope_sfg_cli.commands.rst  earthscope_sfg_cli.manifest.rst  earthscope_sfg_cli.utils.rst  earthscope_sfg_workflows.config.env_config.rst  earthscope_sfg_workflows.config.file_config.rst  earthscope_sfg_workflows.config.garpos_config.rst  earthscope_sfg_workflows.config.loadconfigs.rst  earthscope_sfg_workflows.config.rst  earthscope_sfg_workflows.config.shotdata_filters.rst  earthscope_sfg_workflows.config.workspace.rst  earthscope_sfg_workflows.data_mgmt.assetcatalog.handler.rst  earthscope_sfg_workflows.data_mgmt.assetcatalog.rst  (+204 more)
docs/source/pages/: Installation.md
examples/geolab/: get_data.py
examples/modeling/: run_modeling.py
examples/preprocessing/: config_primary_example.json  intermediate_pipeline_notebook.py  intermediate_processing.py  novatel_to_rinex.py  preprocessing.py  qc_pipeline_processing.py  shotdata.py
examples/qc/: run_qc.py
examples/s3sync/: uploadtbds3.py
scripts/: fix_tiledb_rpath.sh  gen_api_docs.py
src/: .env  __init__.py  env.py
src/es_sfgtools/: __init__.py  __main__.py
src/es_sfgtools/config/: __init__.py  env_config.py  file_config.py  garpos_config.py  loadconfigs.py  shotdata_filters.py  tiledb_s3_config.py
src/es_sfgtools/data_mgmt/: catalog.py  constants.py  data_handler.py  database.py  datadiscovery.py  directory_handler.py  file_schemas.py  old_datahandler.py  post_processing.py  utils.py
src/es_sfgtools/data_models/: __init__.py  community_standards.py  constants.py  log_models.py  observables.py  sv3_models.py
src/es_sfgtools/garpos_tools/: __init__.py  functions.py  schemas.py  setup.py
src/golangtools/: Makefile  go.mod  go.sum
tests/: test_env.py  test_extract_rangea.py  test_garpos.py  test_parsing.py  test_rangea_parsing.py  test_rangea_to_rinex.py
tests/sv3_tests/: test_sv3_parsing.py
~/: demo_site_conf.json
(+272 files in other folders)
