# Build system configuration and define tools required to build the package
[build-system]
requires = [
    "setuptools>=62.6",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

# Project metadata (basic information about the package)
[project]
name = "es_sfgtools"
description = "Utilities for translating and processing Seafloor Geodesy data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.10"

# Authors
authors = [
  { name = "Mike Gottlieb", email = "mike.gottlieb@earthscope.org" },
  { name = "Franklyn Dunbar", email = "franklyn.dunbar@earthscope.org" },
  { name = "Rachel Akie", email = "rachel.akie@earthscope.org" }
]

# Classifiers help users find your project
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Dynamic fields are determined at build time -- 'version' comes from setuptools_scm (git tags)
dynamic = ["version"]

# --- Runtime dependencies (Python packages your code actually imports) ---
dependencies = [
  "numpy==1.26.4",
  "scipy==1.16.3",
  "pandas==2.3.3",
  "matplotlib==3.10.6",
  "scikit-learn==1.7.2",
  "julian==0.14",
  "pandera==0.20.3",
  "pyarrow==21.0.0",
  "pydantic==2.8.2",
  "pyproj==3.6.1",
  "pymap3d==3.2.0",
  "boto3==1.40.54",
  "botocore==1.40.54",
  "tqdm==4.67.1",
  "sqlalchemy==2.0.43",
  "python-dotenv==1.1.0",
  "tiledb==0.34.2",
  "seaborn==0.13.2",
  "earthscope-sdk==1.1.1",
  "earthscope-cli==1.0.1",
  "gnatss==0.3.1",
  "regex==2025.11.3",
  "cloudpathlib[s3]==0.23.0",
  "colorama>=0.4.6",
]

[project.optional-dependencies]
# Everything you only need for dev / docs / notebooks
dev = [
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser",
  "sphinxcontrib-apidoc",
  "sphinx_pyproject",
]
notebook = [
  "ipykernel",
]
# garpos = [
#   "garpos @ git+https://github.com/EarthScope/garpos.git",
# ]

# Project URLs
[project.urls]
"Homepage" = "https://github.com/EarthScope/es_sfgtools"
"ReadTheDocs" = "https://es-sfgtools.readthedocs.io/en/latest/"

# Configuration for setuptools_scm (manages the versioning automatically using git tags)
[tool.setuptools_scm]
write_to = "src/es_sfgtools/_version.py"

# Tell setuptools you're using 'src/' layout
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]