# Build system configuration and define tools required to build the package
[build-system]
requires = [
    "setuptools>=62.6",
    "setuptools_scm[toml]>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

# Project metadata (basic information about the package)
[project]
name = "es_sfgtools"
description = "Utilities for translating and processing Seafloor Geodesy data"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">= 3.11"

# Authors
authors = [
  { name = "Mike Gottlieb", email = "mike.gottlieb@earthscope.org" },
  { name = "Franklyn Dunbar", email = "franklyn.dunbar@earthscope.org" },
  { name = "Rachel Akie", email = "rachel.akie@earthscope.org" }
]

# Classifiers help users find your project
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Dynamic fields are determined at build time -- 'version' comes from setuptools_scm (git tags)
dynamic = ["version"]

# --- Runtime dependencies (versions managed by pixi.lock) ---
dependencies = [
  "scipy",
  "pandas",
  "matplotlib",
  "julian",
  "pandera",
  "pydantic",
  "pyproj",
  "pymap3d",
  "boto3",
  "botocore",
  "tqdm",
  "sqlalchemy",
  "python-dotenv",
  "seaborn",
  "earthscope-sdk",
  "earthscope-cli",
  "gnatss",
  "regex",
  "cloudpathlib[s3]",
  "colorama",
  "garpos @ git+https://github.com/EarthScope/garpos.git",
]

[project.optional-dependencies]
# Everything you only need for dev / docs / notebooks
dev = [
  "sphinx",
  "sphinx-rtd-theme",
  "myst-parser",
  "sphinxcontrib-apidoc",
  "sphinx_pyproject",
  "build",
  "twine",
]
notebook = [
  "ipykernel",
  "jupyterlab",
]

# Project URLs
[project.urls]
"Homepage" = "https://github.com/EarthScope/es_sfgtools"
"ReadTheDocs" = "https://es-sfgtools.readthedocs.io/en/latest/"

# Configuration for setuptools_scm (manages the versioning automatically using git tags)
[tool.setuptools_scm]
write_to = "src/es_sfgtools/_version.py"

# Tell setuptools you're using 'src/' layout
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]