# =============================================================================
# Root pyproject.toml — workspace-level tooling configuration only.
# Package metadata lives in packages/*/pyproject.toml.
# =============================================================================

[build-system]
requires = ["setuptools>=62.6"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------------
# Ruff (linter + formatter)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = [
    "packages/earthscope-sfg/src",
    "packages/earthscope-sfg-workflows/src",
    "packages/cli/src",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "SIM105", "SIM108", "SIM102", "SIM101", "B028", "B024"]

[tool.ruff.lint.per-file-ignores]
"**/__init__.py" = ["F401"]
"**/cli/__main__.py" = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["es_sfgtools"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]